feat: add new projects

--- a/index.html
+++ b/index.html
@@ -79,6 +79,294 @@
     </div>
 
     <div
+      class="border-b-4 border-black flex flex-col p-5 gap-8 xl:px-56 xl:py-28 sm:p-8"
+    >
+      <div class="relative">
+        <h1
+          class="relative z-50 bg-background font-bold border-2 border-black p-2.5 text-5xl"
+        >
+          Projects
+        </h1>
+        <div
+          class="absolute left-0 top-0 h-full w-full bg-background-2 translate-x-2 translate-y-2 z-0"
+        ></div>
+      </div>
+
+      <div class="grid grid-cols-1s gap-4 xl:grid-cols-2">
+        <!-- first project -->
+        <div class="relative border-2 border-black">
+          <div class="relative z-10 bg-white h-full">
+            <div
+              class="flex justify-between items-center p-2 border-b border-black"
+            >
+              <p class="font-semibold">Trabahuso</p>
+              <div class="flex gap-2">
+                <a
+                  href="https://github.com/kenBinary/trabahuso-frontend"
+                  class="flex gap-2 border border-black p-[4px]"
+                  target="_blank"
+                >
+                  <p>code</p>
+                  <img
+                    src="/new-window.svg"
+                    alt="logo indicating to open link in new tab"
+                    class="w-4"
+                  />
+                </a>
+
+                <a
+                  href="https://kenbinary.github.io/trabahuso-frontend/"
+                  class="flex gap-2 border border-black p-[4px]"
+                  target="_blank"
+                >
+                  <p>demo</p>
+                  <img
+                    src="/new-window.svg"
+                    alt="logo indicating to open link in new tab"
+                    class="w-4"
+                  />
+                </a>
+              </div>
+            </div>
+
+            <div class="aspect-video border-b border-black">
+              <img
+                src="/project-demos/trabahuso-demo.gif"
+                alt="gif image demo of trabahuso website"
+              />
+            </div>
+
+            <div class="">
+              <p class="p-2 bg-black text-white">
+                Data visualizations of scraped software developer jobs providing
+                insights to the software developer job market in the
+                Philippines.
+              </p>
+
+              <div class="p-2 flex flex-wrap justify-center items-center gap-2">
+                <div
+                  class="border p-1 border-black flex gap-2 items-center justify-center"
+                >
+                  <img
+                    src="/typescript.svg"
+                    alt="logo of typescript"
+                    class="w-6"
+                  />
+                  <p>typescript</p>
+                </div>
+
+                <div
+                  class="border p-1 border-black flex gap-2 items-center justify-center"
+                >
+                  <img src="/react.svg" alt="logo of react" class="w-6" />
+                  <p>react</p>
+                </div>
+
+                <div
+                  class="border p-1 border-black flex gap-2 items-center justify-center"
+                >
+                  <img
+                    src="/express.svg"
+                    alt="logo of express.js"
+                    class="w-6"
+                  />
+                  <p>express.js</p>
+                </div>
+
+                <div
+                  class="border p-1 border-black flex gap-2 items-center justify-center"
+                >
+                  <img src="/python.svg" alt="logo of python" class="w-6" />
+                  <p>python</p>
+                </div>
+
+                <div
+                  class="border p-1 border-black flex gap-2 items-center justify-center"
+                >
+                  <img src="/selenium.svg" alt="logo of selenium" class="w-6" />
+                  <p>selenium</p>
+                </div>
+
+                <div
+                  class="border p-1 border-black flex gap-2 items-center justify-center"
+                >
+                  <img src="/sqlite.svg" alt="logo of sqlite" class="w-6" />
+                  <p>sqlite</p>
+                </div>
+
+                <div
+                  class="border p-1 border-black flex gap-2 items-center justify-center"
+                >
+                  <img src="/chakraui.svg" alt="logo of chakraui" class="w-6" />
+                  <p>chakra ui</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div
+            class="absolute left-0 top-0 h-full w-full bg-background-2 translate-x-2 translate-y-2 z-0"
+          ></div>
+        </div>
+
+        <!-- second project -->
+        <div class="relative border-2 border-black">
+          <div class="relative z-10 bg-white h-full">
+            <div
+              class="flex justify-between items-center p-2 border-b border-black"
+            >
+              <p class="font-semibold">Fitster</p>
+              <div class="flex gap-2">
+                <a
+                  href="https://github.com/kenBinary/fitster"
+                  class="flex gap-2 border border-black p-[4px]"
+                  target="_blank"
+                >
+                  <p>code</p>
+                  <img
+                    src="/new-window.svg"
+                    alt="logo indicating to open link in new tab"
+                    class="w-4"
+                  />
+                </a>
+              </div>
+            </div>
+
+            <div class="aspect-video border-b border-black flex justify-center">
+              <img
+                src="/project-demos/fitster-demo.gif"
+                alt="gif image demo of fitster app"
+                class="h-full"
+              />
+            </div>
+
+            <div>
+              <p class="p-2 bg-black text-white">
+                A workout planner and tracker app I developed as my final
+                project for a mobile app development class.
+              </p>
+
+              <div class="p-2 flex flex-wrap justify-center gap-2">
+                <div
+                  class="border p-1 border-black flex gap-2 items-center justify-center"
+                >
+                  <img src="/dart.svg" alt="logo of dart" class="w-6" />
+                  <p>dart</p>
+                </div>
+
+                <div
+                  class="border p-1 border-black flex gap-2 items-center justify-center"
+                >
+                  <img src="/flutter.svg" alt="logo of flutter" class="w-6" />
+                  <p>flutter</p>
+                </div>
+
+                <div
+                  class="border p-1 border-black flex gap-2 items-center justify-center"
+                >
+                  <img
+                    src="/firebase.svg"
+                    alt="logo of firebase.js"
+                    class="w-6"
+                  />
+                  <p>firebase.js</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div
+            class="absolute left-0 top-0 h-full w-full bg-background-2 translate-x-2 translate-y-2 z-0"
+          ></div>
+        </div>
+
+        <!-- third project -->
+        <div class="relative border-2 border-black">
+          <div class="relative z-10 bg-white h-full">
+            <div
+              class="flex justify-between items-center p-2 border-b border-black"
+            >
+              <p class="font-semibold">Boarding House Management System</p>
+              <div class="flex gap-2">
+                <a
+                  href="https://github.com/kenBinary/bh-management-v2"
+                  class="flex gap-2 border border-black p-[4px]"
+                  target="_blank"
+                >
+                  <p>code</p>
+                  <img
+                    src="/new-window.svg"
+                    alt="logo indicating to open link in new tab"
+                    class="w-4"
+                  />
+                </a>
+              </div>
+            </div>
+
+            <div class="aspect-video border-b border-black flex justify-center">
+              <img
+                src="/project-demos/bh-management-demo.gif"
+                alt="gif image demo of bh management web app"
+                class="h-full w-full"
+              />
+            </div>
+
+            <div>
+              <p class="p-2 bg-black text-white">
+                Web app that allows a landlord to efficiently manage their
+                boarding house.
+              </p>
+
+              <div class="p-2 flex flex-wrap justify-center gap-2">
+                <div
+                  class="border p-1 border-black flex gap-2 items-center justify-center"
+                >
+                  <img src="/react.svg" alt="logo of react" class="w-6" />
+                  <p>react</p>
+                </div>
+                <div
+                  class="border p-1 border-black flex gap-2 items-center justify-center"
+                >
+                  <img
+                    src="/typescript.svg"
+                    alt="logo of typescript"
+                    class="w-6"
+                  />
+                  <p>typescript</p>
+                </div>
+
+                <div
+                  class="border p-1 border-black flex gap-2 items-center justify-center"
+                >
+                  <img src="/express.svg" alt="logo of express" class="w-6" />
+                  <p>express.js</p>
+                </div>
+
+                <div
+                  class="border p-1 border-black flex gap-2 items-center justify-center"
+                >
+                  <img src="/mysql.svg" alt="logo of mysql" class="w-6" />
+                  <p>mysql</p>
+                </div>
+
+                <div
+                  class="border p-1 border-black flex gap-2 items-center justify-center"
+                >
+                  <img src="/chakraui.svg" alt="logo of chakraui" class="w-6" />
+                  <p>chakra ui</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div
+            class="absolute left-0 top-0 h-full w-full bg-background-2 translate-x-2 translate-y-2 z-0"
+          ></div>
+        </div>
+      </div>
+    </div>
+
+    <div
       class="grid gap-8 border-b-4 border-black p-5 grid-cols-1 sm:p-8 xl:px-56 xl:py-28 xl:grid-cols-[6fr_7fr_7fr]"
     >
       <div class="relative xl:col-span-3">
@@ -286,112 +574,6 @@
               <img src="/api.svg" alt="logo of api" />
               <p class="text-center break-words">REST api</p>
             </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div
-      class="border-b-4 border-black flex flex-col p-5 gap-8 xl:px-56 xl:py-28 sm:p-8"
-    >
-      <div class="relative">
-        <h1
-          class="relative z-50 bg-background font-bold border-2 border-black p-2.5 text-5xl"
-        >
-          Projects
-        </h1>
-        <div
-          class="absolute left-0 top-0 h-full w-full bg-background-2 translate-x-2 translate-y-2 z-0"
-        ></div>
-      </div>
-
-      <div
-        class="border-2 border-black grid grid-cols-1 xl:grid-cols-[5fr_2fr] xl:grid-rows-[2fr_15fr_3fr]"
-      >
-        <div class="border border-black p-2.5 text-lg bg-background font-bold">
-          Trabahuso
-        </div>
-
-        <div class="border border-black bg-background xl:row-span-2">
-          <img
-            src="/project-demos/trabahuso-demo.gif"
-            alt="trabahuso website gif demo"
-            class="sm:h-full"
-          />
-        </div>
-
-        <div
-          class="border border-black flex flex-col gap-2 p-2.5 bg-background-2 xl:col-start-2 xl:row-start-1 xl:row-span-2"
-        >
-          <p class="text-background">
-            Data visualizations of scraped software developer jobs providing
-            insights to the software developer job market in the Philippines.
-          </p>
-          <div class="flex flex-wrap gap-2 justify-center">
-            <div class="bg-background p-1 flex gap-2 flex-wrap shrink-0 grow-0">
-              <img src="/typescript.svg" alt="logo of typescript" class="w-6" />
-              typescript
-            </div>
-            <div class="bg-background p-1 flex gap-2 flex-wrap shrink-0 grow-0">
-              <img src="/react.svg" alt="logo of react" class="w-6" />
-              react
-            </div>
-            <div class="bg-background p-1 flex gap-2 flex-wrap shrink-0 grow-0">
-              <img src="/express.svg" alt="logo of express" class="w-6" />
-              express.js
-            </div>
-            <div class="bg-background p-1 flex gap-2 flex-wrap shrink-0 grow-0">
-              <img src="/python.svg" alt="logo of python" class="w-6" />
-              python
-            </div>
-            <div class="bg-background p-1 flex gap-2 flex-wrap shrink-0 grow-0">
-              <img src="/selenium.svg" alt="logo of selenium" class="w-6" />
-              selenium
-            </div>
-            <div class="bg-background p-1 flex gap-2 flex-wrap shrink-0 grow-0">
-              <img src="/sqlite.svg" alt="logo of sqlite" class="w-6" />
-              sqlite
-            </div>
-            <div class="bg-background p-1 flex gap-2 flex-wrap shrink-0 grow-0">
-              <img src="/chakraui.svg" alt="logo of chakraui" class="w-6" />
-              chakra ui
-            </div>
-          </div>
-        </div>
-
-        <div
-          class="border border-black bg-background p-2.5 flex justify-center items-start gap-2"
-        >
-          <div class="p-0.5 relative">
-            <p class="border border-black relative z-10 bg-background p-0.5">
-              <a
-                href="https://github.com/kenBinary/trabahuso-frontend"
-                target="_blank"
-                class="relative z-10 flex"
-                >code
-                <img src="/new-window.svg" alt="" class="w-5" />
-              </a>
-            </p>
-
-            <div
-              class="absolute left-0 top-0 h-full w-full bg-background-2 translate-x-1 translate-y-1 z-0"
-            ></div>
-          </div>
-
-          <div class="p-0.5 relative">
-            <p class="border border-black relative z-10 bg-background p-0.5">
-              <a
-                href="https://kenbinary.github.io/trabahuso-frontend/"
-                target="_blank"
-                class="relative z-10 flex"
-                >demo
-                <img src="/new-window.svg" alt="" class="w-5" />
-              </a>
-            </p>
-
-            <div
-              class="absolute left-0 top-0 h-full w-full bg-background-2 translate-x-1 translate-y-1 z-0"
-            ></div>
           </div>
         </div>
       </div>
