add resume section

--- a/index.html
+++ b/index.html
@@ -78,6 +78,51 @@
       </div>
     </div>
 
+    <!-- Resume Section -->
+    <div
+      class="flex flex-col gap-8 border-b-4 border-black p-5 sm:p-8 xl:px-56 xl:py-28"
+    >
+      <div class="relative">
+        <h1
+          class="relative z-10 bg-background font-bold border-2 border-black p-2.5 text-5xl"
+        >
+          Resume
+        </h1>
+        <div
+          class="absolute left-0 top-0 h-full w-full bg-background-2 translate-x-2 translate-y-2 z-0"
+        ></div>
+      </div>
+
+      <div class="border border-black relative">
+        <div class="relative z-10 bg-white">
+          <div class="p-2 text-right border-b border-black">
+            <a
+              href="https://drive.google.com/file/d/1K8BkI99rMg8lPRx5QtwgamvOKqrj1SlI/view?usp=sharing"
+              target="_blank"
+              class="inline-block border border-black p-1"
+              >view external</a
+            >
+            <a
+              href="/cv.pdf"
+              class="border inline-block border-black p-1"
+              download
+            >
+              download</a
+            >
+          </div>
+
+          <div>
+            <img src="/cv.webp" alt="image of cv" />
+          </div>
+        </div>
+
+        <div
+          class="absolute left-0 top-0 h-full w-full bg-background-2 translate-x-2 translate-y-2 z-0"
+        ></div>
+      </div>
+    </div>
+
+    <!-- Projects Section -->
     <div
       class="border-b-4 border-black flex flex-col p-5 gap-8 xl:px-56 xl:py-28 sm:p-8"
     >
