--- a/index.html
+++ b/index.html
@@ -122,6 +122,50 @@
       </div>
     </div>
 
+    <!-- certificate Section -->
+    <div
+      class="flex flex-col gap-8 border-b-4 border-black p-5 sm:p-8 xl:px-56 xl:py-28"
+    >
+      <div class="relative">
+        <h1
+          class="relative z-10 bg-background font-bold border-2 border-black p-2.5 text-4xl sm:text-5xl"
+        >
+          Certifications
+        </h1>
+        <div
+          class="absolute left-0 top-0 h-full w-full bg-background-2 translate-x-2 translate-y-2 z-0"
+        ></div>
+      </div>
+
+      <div class="border border-black relative">
+        <div
+          class="relative z-10 bg-white flex flex-col items-center lg:flex-row"
+        >
+          <div class="w-full h-[240px]">
+            <div
+              data-iframe-width="100"
+              data-iframe-height="100"
+              data-share-badge-id="bdf0ec46-6040-48fe-82ed-c087945d3bcf"
+              data-share-badge-host="https://www.credly.com"
+            ></div>
+          </div>
+
+          <div class="w-full h-[240px]">
+            <div
+              data-iframe-width="100"
+              data-iframe-height="100"
+              data-share-badge-id="88ab75bd-bfae-4a08-885d-0950de81ecb9"
+              data-share-badge-host="https://www.credly.com"
+            ></div>
+          </div>
+        </div>
+
+        <div
+          class="absolute left-0 top-0 h-full w-full bg-background-2 translate-x-2 translate-y-2 z-0"
+        ></div>
+      </div>
+    </div>
+
     <!-- Projects Section -->
     <div
       class="border-b-4 border-black flex flex-col p-5 gap-8 xl:px-56 xl:py-28 sm:p-8"
@@ -788,5 +832,59 @@
         </div>
       </div>
     </div>
+
+    <script>
+      (function () {
+        var e, t, a, r, d, l, i, m, n, o, u, c, s;
+        for (
+          window.CREDLY_EMBED_JS_LOADER_VERSION = "20210331",
+            e = "www.credly.com",
+            t =
+              /(.*\.credly.com$|(credly\.local|acclaim\.local|localhost|web):500[0-2]$)/,
+            c = function (e) {
+              if (null != e) return t.test(e) ? e : void 0;
+            },
+            l = function (e) {
+              var t, a, r, d, l;
+              if (null != document.querySelectorAll)
+                return document.querySelectorAll("[data-" + e + "]");
+              for (
+                l = [],
+                  r = 0,
+                  d = (t = document.getElementsByTagName("*")).length;
+                r < d;
+                r++
+              )
+                (a = t[r]).getAttribute("data-" + e) && l.push(a);
+              return l;
+            },
+            m = 0,
+            n = (o = l("share-badge-id")).length;
+          m < n;
+          m++
+        )
+          (r = (d = o[m]).attributes.getNamedItem("data-share-badge-id").value),
+            (s = d.attributes.getNamedItem("data-iframe-width").value),
+            (i = d.attributes.getNamedItem("data-iframe-height").value),
+            (a = c(
+              null != (u = d.attributes.getNamedItem("data-share-badge-host"))
+                ? u.value
+                : void 0
+            )) || (a = e),
+            /^https?:\/\//.test(a) || (a = "//" + a),
+            (d.outerHTML =
+              '<iframe name="acclaim-badge" allowTransparency="true" frameborder="0" id="embedded-badge-' +
+              r +
+              '" scrolling="no" src="' +
+              a +
+              "/embedded_badge/" +
+              r +
+              '" style="width: ' +
+              s +
+              "%; height: " +
+              i +
+              '%;" title="View my verified achievement on Credly." ></iframe>');
+      }).call(this);
+    </script>
   </body>
 </html>
