made script async

--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
       </div>
     </div>
 
-    <script>
+    <script async>
       (function () {
         var e, t, a, r, d, l, i, m, n, o, u, c, s;
         for (
