refactor: removed sections from ojt

--- a/index.html
+++ b/index.html
@@ -67,101 +67,24 @@
       </div>
 
       <div class="relative self-end sm:col-span-2 xl:col-span-1">
-        <p
-          class="z-10 relative border-2 border-black bg-background-2 text-background text-xl p-2.5"
+        <a
+          href="https://drive.google.com/file/d/11muYMiAFrm2YqlBR0e3tCR7hFavtx_qb/view?usp=sharing"
+          target="_blank"
+          class="flex justify-center gap-2 z-10 relative border-2 border-black bg-background-2 text-background p-2.5"
         >
-          learn more about me below
-        </p>
+          <p class="font-semibold text-xl lg:text-2xl">Resume</p>
+          <img
+            src="/new-window.svg"
+            alt="Icon indicating new window on click"
+            class="aspect-square w-8"
+            style="
+              filter: invert(96%) sepia(4%) saturate(15%) hue-rotate(85deg)
+                brightness(104%) contrast(105%);
+            "
+          />
+        </a>
         <div
           class="bg-background translate-x-2 translate-y-2.5 z-0 w-full h-full absolute top-0 border-2 border-black"
-        ></div>
-      </div>
-    </div>
-
-    <!-- Resume Section -->
-    <div
-      class="flex flex-col gap-8 border-b-4 border-black p-5 sm:p-8 xl:px-56 xl:py-28"
-    >
-      <div class="relative">
-        <h1
-          class="relative z-10 bg-background font-bold border-2 border-black p-2.5 text-5xl"
-        >
-          Resume
-        </h1>
-        <div
-          class="absolute left-0 top-0 h-full w-full bg-background-2 translate-x-2 translate-y-2 z-0"
-        ></div>
-      </div>
-
-      <div class="border border-black relative">
-        <div class="relative z-10 bg-white">
-          <div class="p-2 text-right border-b border-black">
-            <a
-              href="https://drive.google.com/file/d/1K8BkI99rMg8lPRx5QtwgamvOKqrj1SlI/view?usp=sharing"
-              target="_blank"
-              class="inline-block border border-black p-1"
-              >view external</a
-            >
-            <a
-              href="/cv.pdf"
-              class="border inline-block border-black p-1"
-              download
-            >
-              download</a
-            >
-          </div>
-
-          <div>
-            <img src="/cv.webp" alt="image of cv" />
-          </div>
-        </div>
-
-        <div
-          class="absolute left-0 top-0 h-full w-full bg-background-2 translate-x-2 translate-y-2 z-0"
-        ></div>
-      </div>
-    </div>
-
-    <!-- certificate Section -->
-    <div
-      class="flex flex-col gap-8 border-b-4 border-black p-5 sm:p-8 xl:px-56 xl:py-28"
-    >
-      <div class="relative">
-        <h1
-          class="relative z-10 bg-background font-bold border-2 border-black p-2.5 text-4xl sm:text-5xl"
-        >
-          Certifications
-        </h1>
-        <div
-          class="absolute left-0 top-0 h-full w-full bg-background-2 translate-x-2 translate-y-2 z-0"
-        ></div>
-      </div>
-
-      <div class="border border-black relative">
-        <div
-          class="relative z-10 bg-white flex flex-col items-center lg:flex-row"
-        >
-          <div class="w-full h-[240px]">
-            <div
-              data-iframe-width="100"
-              data-iframe-height="100"
-              data-share-badge-id="bdf0ec46-6040-48fe-82ed-c087945d3bcf"
-              data-share-badge-host="https://www.credly.com"
-            ></div>
-          </div>
-
-          <div class="w-full h-[240px]">
-            <div
-              data-iframe-width="100"
-              data-iframe-height="100"
-              data-share-badge-id="88ab75bd-bfae-4a08-885d-0950de81ecb9"
-              data-share-badge-host="https://www.credly.com"
-            ></div>
-          </div>
-        </div>
-
-        <div
-          class="absolute left-0 top-0 h-full w-full bg-background-2 translate-x-2 translate-y-2 z-0"
         ></div>
       </div>
     </div>
